<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".VocaDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ivory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <TextView
            android:id="@+id/voca_note_kr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:text="@string/vocabulary_kr"/>

        <TextView
            android:id="@+id/voca_note_foreign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/vocabulary_en"/>

        <CheckBox
            android:id="@+id/btn_bookmark"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:checked="true"
            android:background="@drawable/btn_bookmark"
            android:button="@android:color/transparent"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/word_pic"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/cat_sample"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="고양이"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/word_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/example_sentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="고양이가 웃고있습니다"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/practice_view"
        android:layout_width="160dp"
        android:layout_height="170dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_shape"
        app:layout_constraintTop_toBottomOf="@+id/example_sentence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/practice_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:src="@drawable/ic_write"
        app:layout_constraintEnd_toEndOf="@+id/practice_view"
        app:layout_constraintStart_toStartOf="@+id/practice_view"
        app:layout_constraintTop_toTopOf="@+id/practice_view" />

    <TextView
        android:id="@+id/practice_kr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/practice_kr"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/practice_icon"
        app:layout_constraintEnd_toEndOf="@+id/practice_view"
        app:layout_constraintStart_toStartOf="@+id/practice_view" />

    <TextView
        android:id="@+id/practice_foreign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practice_en"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/practice_kr"
        app:layout_constraintEnd_toEndOf="@+id/practice_view"
        app:layout_constraintStart_toStartOf="@+id/practice_view" />

</androidx.constraintlayout.widget.ConstraintLayout>